--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h2>problem will not last</h2>
     <a href="contact.html">Contact me</a>
-    <img width="100px" src="Images/image.jpg" alt="">
+    <img width="100px" src="images/image.jpg" alt="">
     <img width="100px" src="images/lucas-calloch-p-yzuywfeik-unsplash.jpg" alt="">
 </body>
 </html>
